--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -5,5 +5,12 @@
 
     h2{
         margin: 10px 0;
+        
+    }
+
+
+    .buttons-container{
+        display: flex;
+        justify-content: space-between;
     }
 }
